gearset/main/default/objects/Custom_Object__c/Custom_Object__c.object-meta.xml
<CustomObject>
    <label>Custom Object</label>
    <nameField>
        <label>Custom Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>