gearset/main/default/objects/Custom_Object__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Custom Objects</relationshipLabel>
    <relationshipName>Custom_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>