gearset/main/default/objects/Custom_Object__c/fields/auto__c.field-meta.xml
<CustomField>
    <fullName>auto__c</fullName>
    <externalId>true</externalId>
    <label>auto</label>
    <type>AutoNumber</type>
</CustomField>