gearset/main/default/objects/Custom_Object__c/fields/boolean2__c.field-meta.xml
<CustomField>
    <fullName>boolean2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>boolean2</label>
    <type>Checkbox</type>
</CustomField>