gearset/main/default/objects/Custom_Object__c/fields/boolean__c.field-meta.xml
<CustomField>
    <fullName>boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>boolean</label>
    <type>Checkbox</type>
</CustomField>