gearset/main/default/objects/Custom_Object__c/fields/not_auto__c.field-meta.xml
<CustomField>
    <fullName>not_auto__c</fullName>
    <externalId>true</externalId>
    <label>not auto</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>