gearset/main/default/objects/Custom_Object__c/fields/tdgdrg__c.field-meta.xml
<CustomField>
    <fullName>tdgdrg__c</fullName>
    <label>tdgdrg</label>
    <type>Date</type>
</CustomField>